--- a/Jenkins-OpenShift/Jenkinsfile
+++ b/Jenkins-OpenShift/Jenkinsfile
@@ -7,7 +7,9 @@ pipeline {
   
   stages {
     stage('Database') {
-      build job: 'PSDB', parameters: [[$class: 'StringParameterValue', name: 'projectName', value: projectName]]
+      steps {
+        build job: 'PSDB', parameters: [[$class: 'StringParameterValue', name: 'projectName', value: projectName]]
+      }
     }
     stage('DB Monitoring') {
       build job: 'dbmon', parameters: [[$class: 'StringParameterValue', name: 'projectName', value: projectName]]
