--- a/Jenkins-OpenShift/Jenkinsfile
+++ b/Jenkins-OpenShift/Jenkinsfile
@@ -12,19 +12,29 @@ pipeline {
       }
     }
     stage('DB Monitoring') {
-      build job: 'dbmon', parameters: [[$class: 'StringParameterValue', name: 'projectName', value: projectName]]
+      steps {
+        build job: 'dbmon', parameters: [[$class: 'StringParameterValue', name: 'projectName', value: projectName]]
+      }
     }
     stage('Petclinic') {
-      build job: 'petclinic', parameters: [[$class: 'StringParameterValue', name: 'projectName', value: projectName]]
+      steps {
+        build job: 'petclinic', parameters: [[$class: 'StringParameterValue', name: 'projectName', value: projectName]]
+      }
     }
     stage('Moodle') {
-      build job: 'moodle', parameters: [[$class: 'StringParameterValue', name: 'projectName', value: projectName]]
+      steps {
+        build job: 'moodle', parameters: [[$class: 'StringParameterValue', name: 'projectName', value: projectName]]
+      }
     }
     stage('Prometheus') {
-      build job: 'prometheus', parameters: [[$class: 'StringParameterValue', name: 'projectName', value: projectName]]
+      steps {
+        build job: 'prometheus', parameters: [[$class: 'StringParameterValue', name: 'projectName', value: projectName]]
+      }
     }
     stage('Grafana') {
-      build job: 'grafana', parameters: [[$class: 'StringParameterValue', name: 'projectName', value: projectName]]
+      steps {
+        build job: 'grafana', parameters: [[$class: 'StringParameterValue', name: 'projectName', value: projectName]]
+      }
     }
   }
   
