--- a/Jenkins-OpenShift/Jenkinsfile
+++ b/Jenkins-OpenShift/Jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
   stages {
     stage('Database') {
       steps {
-        build job: 'PSDB', parameters: [[$class: 'StringParameterValue', name: 'projectName', value: projectName]]
+        build job: 'database', parameters: [[$class: 'StringParameterValue', name: 'projectName', value: projectName]]
       }
     }
     stage('DB Monitoring') {
